--- a/index.html
+++ b/index.html
@@ -2,3 +2,23 @@
 layout: index
 title: Home
 ---
+
+
+
+    Hi there! I'm Yurim Jeon, and I have a Ph.D. in Electrical and Computer Engineering from Seoul National University. My research focuses on the perception for robotics and autonomous driving.     
+    During my graduate course, I worked as a deep learning engineer at an autonomous driving company, contributing to the development of an auto-labeling tool. Throughout my journey, I have consistently achieved research milestones, with publications in academic journals, conference presentations, and GitHub contributions - as both a researcher and engineer. Currently, I am searching for opportunities as a postdoctoral researcher with a passion for deep exploration of robotic perception systems.
+
+    M.S. / Ph.D. in Electrical and Computer Engineering
+Mar, 2017
+~
+Feb, 2023
+Seoul National University, Seoul, Republic of Korea
+
+Vehicle Intelligence Laboratory
+
+B.S. in Electrical and Computer Engineering
+Mar, 2012
+~
+Feb, 2017
+Seoul National University, Seoul, Republic of Korea
+    
