--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@ layout: index
 title: Home
 ---
 
+Hola! I'm Yurim Jeon, and I have a Ph.D. in Electrical and Computer Engineering from Seoul National University. 
 
 
-    Hi there! I'm Yurim Jeon, and I have a Ph.D. in Electrical and Computer Engineering from Seoul National University. My research focuses on the perception for robotics and autonomous driving.     
-    During my graduate course, I worked as a deep learning engineer at an autonomous driving company, contributing to the development of an auto-labeling tool. Throughout my journey, I have consistently achieved research milestones, with publications in academic journals, conference presentations, and GitHub contributions - as both a researcher and engineer. Currently, I am searching for opportunities as a postdoctoral researcher with a passion for deep exploration of robotic perception systems.
+
+My research focuses on the perception for robotics and autonomous driving. During my graduate course, I also worked as a deep learning engineer at an autonomous driving company, contributing to the development of an auto-labeling tool. Throughout my journey, I have consistently achieved research milestones, with publications in academic journals, conference presentations, and GitHub contributions - as both a researcher and engineer. Currently, I am searching for opportunities as a postdoctoral researcher with a passion for deep exploration of robotic perception systems.
 
     M.S. / Ph.D. in Electrical and Computer Engineering
 Mar, 2017
@@ -22,3 +23,4 @@ Mar, 2012
 Feb, 2017
 Seoul National University, Seoul, Republic of Korea
     
+<!-- 안녕! 나는 유림이고, 서울대학교에서 박사 학위를 받았어. 나의 -->
